--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,23 @@
 version: '3'
 services:
+#service1 node image
   node-docker:
     build: .
     ports:
       - "3000:3000"
     environment:
       - PORT=3000
+#service2 mongo image
+  mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=ichangai
+      - MONGO_INITDB_ROOT_PASSWORD=mypassword
+    #   - MONGO_INITDB_DATABASE=sampledb
+    volumes:
+      - mongo-db:/data/db
+
+volumes:
+  mongo-db:   
