--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -10,5 +10,12 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
+      - MONGO_USER=ichangai
+      - MONGO_PASSWORD=mypassword
     command: npm run dev
-  
+  #Mongo service  
+  mongo:
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=ichangai
+      - MONGO_INITDB_ROOT_PASSWORD=mypassword
+        
