--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
 #service2 node image
   node-docker:
     build: .
+    image: ichangai1993/node-docker
     environment:
       - PORT=3000
     depends_on:
